# config/routes.rb
@@ -14,7 +14,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :characters, only: :index
       resources :cities, only: :index
-      resources :players, only: [:index, :create]
+      resources :players, only: [:index, :show, :create]
       resources :teams, only: :index
       get '/search' => 'search#global'
     end
